2008-12-15  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass3/$if): Omit the jump after then clause.
                       (pass2/$if): Omit "if" when (if const then else) appears.
                       (pass3/$if): (if a b #f) => (if a b IT).

2008-12-14  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (parse-lambda-vars): Return values.
                       (lambda-has-define?): Rewrote.
                       (pass1/cond->iform): Added cond expansion.
                       (pass2/$if): Ported pass2/$if from Gauche.

        * Removed library support which is not used.

2008-12-13  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass1/call): Fixed tail? flag for arguments of $call.
                       (pass3/$if): optimization for (if (not x) a b) => (if x b a).

        * VM.cpp (VM_ASSERT): Added VM_ASSERT. It shows dc and cl register.

        * CompilerProcedures.cpp (findSetsLabel): Fixed findSets for searching in $LABEL.

        * compiler.scm : Fixed pass3/find-sets for searching in $LABEL.

2008-12-12  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass3/$receive): Fixed the bug of counting depth of vals clause.
                       (pass1/receive): Fixed wrong tail? flag.

2008-12-11  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass3/$call): Fixed the bug for nested name loop.

2008-12-09  higepon  <higepon@users.sourceforge.jp>

        * CompilerProcedures.cpp (disasmEx): disasm works.

2008-12-08  higepon  <higepon@users.sourceforge.jp>

        * CompilerProcedures.cpp (scheme::disasmEx): Added disasm, but it doesn't work yet!

        * VM.cpp (dumpCompiledCode): Added for debug.

        * scripts/gen-insn.scm (print-to-string): Added generation of toSourceString().

        * compiler.scm (pass1/sexp->iform): Fixed wrong tail? flag for cons and values.

2008-12-07  kokosabu  <kokosabu@gmail.com>
