@@ -1,3 +1,7 @@
+2008-12-16  higepon  <higepon@users.sourceforge.jp>
+
+        * CodeBuilder.cpp (CodeBuilder::combineInstructionsArgument1): Enabled REFER_GLOBAL_CALL.
+
 2008-12-15  higepon  <higepon@users.sourceforge.jp>
 
         * compiler.scm (pass3/$if): Omit the jump after then clause.
